Add deployment config for Railway (backend) + Vercel (frontend)